--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -13,24 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "id": "7b0ef887-f0b7-4e7c-aa4b-efcf6f0b12a0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'1.19.5'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.19.5\n",
+      "1.2.4\n"
+     ]
     }
    ],
    "source": [
     "# What's the version of numpy that you installed?\n",
-    "np.__version__"
+    "print(np.__version__)\n",
+    "print(pd.__version__)"
    ]
   },
   {
